[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Board.gd" type="Script" id=1]

[node name="Board" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Containers" type="HBoxContainer" parent="."]
anchor_left = 0.0917969
anchor_top = 0.0916667
anchor_right = 0.908203
anchor_bottom = 0.908333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="Containers"]
margin_right = 415.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VScrollBar" type="VScrollBar" parent="Containers/ScrollContainer"]
margin_right = 12.0
margin_bottom = 12.0

[node name="NotFinishedContainer" type="VBoxContainer" parent="Containers/ScrollContainer"]
margin_right = 415.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer2" type="ScrollContainer" parent="Containers"]
margin_left = 419.0
margin_right = 835.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VScrollBar" type="VScrollBar" parent="Containers/ScrollContainer2"]
margin_right = 12.0
margin_bottom = 12.0

[node name="FinishedContainer" type="VBoxContainer" parent="Containers/ScrollContainer2"]
margin_right = 416.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopSectionContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 22.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewItemText" type="TextEdit" parent="TopSectionContainer"]
margin_right = 1000.0
margin_bottom = 22.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Text"

[node name="AddItemButotn" type="Button" parent="TopSectionContainer"]
margin_left = 1004.0
margin_right = 1024.0
margin_bottom = 22.0
text = "+"

[node name="Labels" type="HBoxContainer" parent="."]
anchor_top = 0.0366667
anchor_right = 1.0
anchor_bottom = 0.0916667
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ToDoLabel" type="Label" parent="Labels"]
margin_top = 9.0
margin_right = 510.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 3, -11 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "To Do"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DoneLabel" type="Label" parent="Labels"]
margin_left = 514.0
margin_top = 9.0
margin_right = 1024.0
margin_bottom = 23.0
rect_pivot_offset = Vector2( 3, -11 )
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Done"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TopSectionContainer/AddItemButotn" to="." method="_on_AddItemButotn_pressed"]
